--- a/RedSocial/Views/Profile/Index.cshtml
+++ b/RedSocial/Views/Profile/Index.cshtml
@@ -1,21 +1,31 @@
-﻿
+﻿@model RedSocial.Models.ProfileViewModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Perfil";
 }
 
 <hr>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
+
+@if (ViewBag.Error != null)
+{
+    <script>
+        function() {
+           Alert(ViewBag.Error);
+        }</script>
+}
+
+
+@using (Html.BeginForm("Editar", "Profile", FormMethod.Post, new { enctype = "multipart/form-data" }))
+{
     <div class="row">
-        <div class="col-sm-10"><h1>User name</h1></div>
-     
-    </div>
-    <div class="row">
+
         <div class="col-sm-3">
             <!--left col-->
 
             <div class="text-center">
-                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
-                <h6>Upload a different photo...</h6>
-                <input type="file" class="form-control" >
+                <img src="@Url.Action("imagen","Profile")" class="avatar img-circle img-thumbnail" alt="avatar">
+                <input accept="image/*" type="file" class="form-control" id="Imagen" name="Imagen">
             </div><br>
 
             <ul class="list-group">
@@ -26,66 +36,59 @@
         </div><!--/col-3-->
         <div class="col-sm-9">
             <hr>
-            <form class="form" action="##" method="post" id="registrationForm">
-                <div class="form-group">
 
-                    <div class="col-xs-3">
-                        <label for="first_name"><h4>First name</h4></label>
-                        <input type="text" class="form-control" name="first_name" id="first_name" placeholder="first name" title="enter your first name if any.">
-                    </div>
-                </div>
-                <div class="form-group">
+            <div class="form-group">
 
-                    <div class="col-xs-3">
-                        <label for="last_name"><h4>Last name</h4></label>
-                        <input type="text" class="form-control" name="last_name" id="last_name" placeholder="last name" title="enter your last name if any.">
-                    </div>
+                <div class="col-xs-3">
+                    <label for="first_name"><h4>Nombre</h4></label>
+                    @Html.TextBoxFor(d => d.Nombre, "", new { @class = "form-control" })
                 </div>
+            </div>
+            <div class="form-group">
 
-                <div class="form-group">
-                    <div class="col-xs-6">
-                        <label for="mobile"><h4>Mobile</h4></label>
-                        <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
-                    </div>
+                <div class="col-xs-3">
+                    <label for="last_name"><h4>Apellido</h4></label>
+                    @Html.TextBoxFor(d => d.Apellido, "", new { @class = "form-control" })
                 </div>
-                <div class="form-group">
+            </div>
 
-                    <div class="col-xs-6">
-                        <label for="email"><h4>Email</h4></label>
-                        <input type="email" class="form-control" name="email" id="email" placeholder="you@email.com" title="enter your email.">
-                    </div>
+            <div class="form-group">
+                <div class="col-xs-6">
+                    <label for="mobile"><h4>Telefono</h4></label>
+                    @Html.TextBoxFor(d => d.Telefono, "", new { @class = "form-control" })
                 </div>
-                <div class="form-group" style="text-align:center;">
-                    <div class="col-xs-12">
-                        <br>
-                        <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-                        <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
-                    </div>
+            </div>
+            <div class="form-group" style="text-align:center;">
+                <div class="col-xs-12">
+                    <br>
+                    <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Guardar</button>
                 </div>
-            </form>
+            </div>
 
             <hr>
         </div><!--/col-9-->
     </div><!--/row-->
-    <script>
-        $(document).ready(function () {
+}
+
+<script>
+    $(document).ready(function () {
 
 
-            var readURL = function (input) {
-                if (input.files && input.files[0]) {
-                    var reader = new FileReader();
+        var readURL = function (input) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
 
-                    reader.onload = function (e) {
-                        $('.avatar').attr('src', e.target.result);
-                    }
-
-                    reader.readAsDataURL(input.files[0]);
+                reader.onload = function (e) {
+                    $('.avatar').attr('src', e.target.result);
                 }
+
+                reader.readAsDataURL(input.files[0]);
             }
+        }
 
 
-            $(".file-upload").on('change', function () {
-                readURL(this);
-            });
+        $(".file-upload").on('change', function () {
+            readURL(this);
         });
-    </script>
+    });
+</script>
