--- a/RedSocial/Views/Shared/_Layout.cshtml
+++ b/RedSocial/Views/Shared/_Layout.cshtml
@@ -9,9 +9,11 @@
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
+    <link rel="stylesheet" href="~/Content/sweetalert/sweet-alert.css">
     <script src="~/Scripts/jquery-3.6.0.slim.js"></script>
-    <script src="~/Scripts/popper.min.js" ></script>
-    <script src="~/Scripts/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="~/Scripts/popper.min.js"></script>
+    <script src="~/Scripts/bootstrap.min.js"></script>
+    <script src="~/Scripts/sweetalert.min.js"></script>
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
